# cpp_examples

./: .travis.yml  CMakeLists.txt  README.md
00_example/: CMakeLists.txt
00_example/src/: bar.h  foo.cpp  foo.h  main.cpp
00_example/test/: CMakeLists.txt  test_bar.cpp  test_foo.cpp
circular_buffer/: CMakeLists.txt  README.md
circular_buffer/src/: circular_buffer.h  custom_allocator.h  custom_resource.h  main.cpp  my_allocator.h
circular_buffer/test/: CMakeLists.txt  test_cb.cpp  test_cb_const_iterator.cpp  test_cb_iterator.cpp  test_circular_buffer.cpp
cmake/: compiler_settings.cmake  template.cmake
dual/: CMakeLists.txt  README.md
dual/src/: dual.h  main.cpp
dual/test/: CMakeLists.txt  test_constexpr.cpp  test_dual.cpp  test_duald.cpp  test_dualf.cpp
pubsub_event/: CMakeLists.txt  README.md
pubsub_event/src/: event.cpp  event.h  main.cpp
pubsub_event/test/: CMakeLists.txt  test_event.cpp
stack_resource/: CMakeLists.txt  README.md
stack_resource/src/: _stack_resource.h  alignment.h  main.cpp  stack_resource.h
stack_resource/test/: CMakeLists.txt  test_stack_resource.cpp  test_stack_resource_v1.cpp  test_stack_resource_v2.cpp
